Changelog for plone.app.kss

    (name of developer listed in brackets)

plone.app.kss - 1.5dev Unreleased

    - Made the kss.demo dependency optional.
      [hannosch]

plone.app.kss - 1.4 Released 2008-04-21

    - add selenium tests that at the moment are only
      runnable with a special branch of kss.demo,
      available from ploneout.
      [ree]

    - use refreshViewlet instead of macroContent in subscribers
      (closes #7879)
      [gotcha)

plone.app.kss - 1.2 Released 2007-08-17

    - Fix bugs and test layer
      [ree, gotcha, jvloothuis, nouri]

plone.app.kss - 1.2-rc2 Released 2007-07-27

    - External links is not always loaded anymore
      [gotcha]

plone.app.kss - 1.2-rc1.1 Released 2007-07-12

    - Prepare for release
      [ree]

plone.app.kss - 1.2-rc1 Released 2007-07-08

    - Cleaned up Acquisition usage. self.context always needs to be unwrapped
      by aq_inner before using it in Zope2.
      [hannosch]

plone.app.kss - 1.2-beta2 Released 2007-04-30

   - Prepare for release
     [ree]

plone.app.kss - 1.2-beta1.2 Released 2007-03-23

    - Add monkeypatch to offer a temporary workaround to
      five.localsitemanager. This is actually not a kss issue,
      but the problem manifests when any other non-five site manager
      (like kss's one) is used together fith five's one. The
      result is, acquisition wrapping is not added in this case, and
      tools in Plone are returned without a parent. The current patch
      relocates the adding of the acquisition wrapping from the
      localsitemanager of five to the level of zope3. Thus acquisition
      will always be added.
      This is actually not a proper solution and is added from the wrong
      place at the moment.
	  [ree]

plone.app.kss - 1.2-beta1 Released 2007-03-04

    - prepare for release
	  [ree]

plone.app.kss - 1.2-alpha2 Released 2007.02.10

    - adjust for release
	  [ree]

    - Initial package structure.
      [zopeskel]
