@@ -4,6 +4,16 @@ Changelog for plone.app.kss
 
 plone.app.kss - 1.5dev Unreleased
 
+    - Make the plugin tolerant if jQuery is not present,
+      and not have a "jq" reference error in this case.
+      Previously any kss pages (for example, demos) that 
+      did not use jQuery, failed with a javascript error
+      in the presense of this plugin.
+      During this, most things seemed to be working, 
+      apart from any plugins that were missing because 
+      they were to be loaded after the error.
+      [ree]
+
     - Made the kss.demo dependency optional.
       [hannosch]
 
